* Removed global `$opus_image_meta`; replaced with call to `exif_data` method
* Removed `style.less` related function and action calls

= CSS =
* Added styles for comment form fields
* Added more specific selector used with .post.format-link
* Added more BNS Plugin Integration (BPI) adjustments
* Added styles from compiled `style.less` file (file removed)
* Address both class and id usage for the sidebar search form
* Adjusted widths of comment form elements
* Adjusted CSS to better handle large images with captions in large full-width displays
* Adjusted `table` elements from 'max-width: 100%' to 'width: 100%' and other minor changes
* Minor tweaks and adjustments
* Sorted out the adaptive layout for screens less than 480px wide

= JavaScript =
* Added more specific selector used with `.post.format-link` when adding `.link-symbol` class
* Added script to create class to display tables with striped rows
* Removed LESS JavaScript library

= Stanzas =
* PullQuotes - Added `pullquotes-readme.txt` file
* PullQuotes - Added left-side placement with new `to` parameter
* Taglines - Added `taglines-readme.txt` file
* THA - Added `tha-readme.txt` file

= Miscellaneous =
* Documentation Updates
* Minor changes to text tense used in `changelog.txt`
* Removed `style.less` file (compiled and merged into `opus-primus.css` file)
* Removed license references related to LESS as all components were removed
* Updated `hooks-actions.txt`
* Updated `hooks-filters.txt`
* Updated `readme.txt` FAQ - What is the difference between how the "Featured Image" is used on a post and how it is used on a page?
* Updated `readme.txt` FAQ - What are Stanzas?
* Updated `readme.txt` FAQ - What happened to the LESS components of the theme?

/** ------------------------------------------------------------------------- */
== Version 1.1.1 ==
* Released March 2013

= Code =