@@ -31,6 +31,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Added more specific selector used with .post.format-link
 * Added more BNS Plugin Integration (BPI) adjustments
 * Added styles from compiled `style.less` file (file removed)
+* Added `img` elements for captioned images and `wp-smiley` images
 * Address both class and id usage for the sidebar search form
 * Adjusted widths of comment form elements
 * Adjusted CSS to better handle large images with captions in large full-width displays
